# ccx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-js.yml  publish-npm.yml  publish.yml
conformance/: README.md
conformance/invalid/: bad-checksum.ccx  compressed-mimetype.ccx  corrupt-context.ccx  invalid-manifest.ccx  malformed-manifest.ccx  missing-manifest.ccx  missing-mimetype.ccx  path-traversal.ccx  remote-context-file.ccx  remote-context.ccx  signed-missing-sig.ccx
conformance/valid/: core-minimal.ccx  core-with-app-graph.ccx  embeddings-minimal.ccx  shapes-minimal.ccx  signed-minimal.ccx  sources-inline-chunk.ccx  sources-minimal.ccx  sources-only.ccx
js/: README.md  package-lock.json  package.json  tsconfig.json
js/scripts/: smoke-esm.mjs  sync-schema.mjs
js/src/: checksums.ts  conformance.ts  constants.ts  container.ts  errors.ts  graphs.ts  index.ts  manifest.ts  package.ts  signing.ts  types.ts
js/src/schema/: manifest.schema.json
js/tests/: checksums.test.ts  conformance-unit.test.ts  conformance.test.ts  constants.test.ts  container.test.ts  errors.test.ts  graphs.test.ts  manifest.test.ts  package.test.ts  schema-drift.test.ts  signing.test.ts
scripts/: emit_conformance.py  export_public.py
spec/: README.md  ccx-3.0.md  conformance.md  embeddings.md  knowledge.md  manifest.md  shapes.md  sources.md  trust.md  versioning.md  vocabulary.md
src/ccx/: __init__.py  checksums.py  cli.py  conformance.py  constants.py  container.py  context.py  errors.py  graphs.py  manifest.py  package.py  signing.py  writer.py
src/ccx/schemas/: context.jsonld
tests/: fixtures.py  test_checksums.py  test_cli.py  test_conformance.py  test_container.py  test_context.py  test_embeddings.py  test_fixtures.py  test_foundations.py  test_graphs.py  test_manifest.py  test_package.py  test_reader_accessors.py  test_roundtrip.py  test_shapes.py  test_signed.py  test_smoke.py  test_sources.py  test_spec_artifacts.py  test_writer.py
